--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -1,10 +1,38 @@
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+
 .menu{
     font-size: 58px;
 }
 
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
 .menu img{
     vertical-align: baseline;
     text-align: right;
+    width: 118px;
+    height: 48px;
 }
 
 .redes{
@@ -16,3 +44,36 @@
 .logo{
     padding-left: 32px;
 }
+
+/*768px o mas*/
+@media (min-width:768px){
+    .menu img{
+        vertical-align: baseline;
+        text-align: right;
+        width: 218px;
+        height: 48px;
+    }
+}
+
+@media (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+        
