--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -17,7 +17,10 @@
     text-decoration: none;
     font-size: 17px;
   }
-
+  
+  .topnav .icon {
+    display: none;
+  }
   .topnav a:hover {
     background-color: #ddd;
     color: black;
@@ -55,7 +58,7 @@
     }
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
       float: right;
@@ -75,5 +78,4 @@
       display: block;
       text-align: left;
     }
-  }
-        
+  }    
