--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -1,41 +1,8 @@
-
-.topnav {
-    overflow: hidden;
-    background-color: #333;
-  }
-
-.menu{
-    font-size: 58px;
+.navbar-brand img{
+    height: 28px;
 }
-
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav .icon {
-    display: none;
-  }
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-.menu img{
-    vertical-align: baseline;
-    text-align: right;
-    width: 118px;
-    height: 48px;
+.bs-example {
+  margin: 20px;
 }
 
 .redes{
@@ -50,7 +17,7 @@
 
 /*768px o mas*/
 @media (min-width:768px){
-    .menu img{
+    .topnav img{
         vertical-align: baseline;
         text-align: right;
         width: 218px;
