--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -1,30 +1,70 @@
 .navbar-brand img{
     height: 28px;
 }
-.bs-example {
-  margin: 20px;
+.redes{
+    margin-top: 120px;
+    font-size: 46px;
+    vertical-align: bottom;
+    color: #24225c;
 }
 
-.redes{
-    font-size: 36px;
-    vertical-align: bottom;
-    padding-left: 0px;
+.row .col-1 {
+  width: 50%;
+}
+
+.row .col-2 {
+  width: 50%;
+}
+
+.inicio-logo{
+  width: 120%;
+  height: 20%;
+  margin-left: -20px;
+  margin-top: 20px;
+  margin-right: 0;
+  padding: 0;
+  background-color: black;
+}
+
+.inicio-logo img{
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+.presentacion .inicio img{
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+
 }
 
 .inicio {
-  height: 550px;
-  width: 550px;
   margin-top: 20px;
+  padding: 0; 
+}
+
+.inicioSide h2 {
+  font-size: 28px;
+  color: #24225c;
+  line-height: 0.95;
+  font-family: "Lucida Console", Monaco, monospace;
+  text-transform: uppercase;
+  font-weight: bolder;
 }
 
 .inicioSide{
-  width: 150px;
-  height: 120px;
-  background: red;
-  color: #f2f2f2;
-  padding: 10px;
-  margin: 20px auto;
+  transform: rotate(-9deg) skewX(-9deg);
+  margin-top: 20px;
 }
+
+.esca-side{
+  margin-left: 0.5em;
+}
+
 
 .logo{
     padding-left: 32px;
@@ -95,35 +135,23 @@
   margin: 20px auto;
 }
 
-
 /*768px o mas*/
 @media (min-width:768px){
-    .topnav img{
-        vertical-align: baseline;
-        text-align: right;
-        width: 218px;
-        height: 48px;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
+  .presentacion {
+    margin-left: 125px;
+    margin-right: 125px;
+  
   }
   
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }    
+  .menuNav{
+    margin-left: 125px;
+    margin-right: 125px;
+  }
+}
+
+@media (min-width:1650px){
+  .inicioSide h2 {
+    font-size: 48px;
+  }
+  
+}
