--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -69,6 +69,9 @@
 .logo{
     padding-left: 32px;
 }
+.menuSection .row{
+  margin-bottom: 25px;
+}
 .menuSection .divisor{
   background-color: black;
   min-height: 35px;
