--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -6,6 +6,14 @@
   margin-right: -15px;  
 }
 
+.cardOpcion{
+  background-color: darkslategrey;
+}
+.cardOpcion img{
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+}
 .rowDir{
   margin-right: 0;
 }
@@ -212,10 +220,15 @@
     padding-right: 0;
   }
   
-  .menuNav{
+  .menuNav {
     margin-left: 125px;
     margin-right: 125px;
     padding-right: 0;
+  }
+
+  .opciones{
+    margin-left: 125px;
+    margin-right: 125px;
   }
   .inicioSide{
     margin-top: 36px;
