--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -6,14 +6,27 @@
   margin-right: -15px;  
 }
 
+.opcion{
+  height: 240px;
+}
 .cardOpcion{
   background-color: darkslategrey;
+  color: #f2f2f2;
+  margin-right: 25%;
 }
+
 .cardOpcion img{
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 65%;
+  max-height: 65%;
   display: block;
 }
+
+.card-body a{
+  float: right;
+  margin-top: 15%;
+}
+
+
 .rowDir{
   margin-right: 0;
 }
@@ -25,7 +38,14 @@
     text-align: center;
     background-color: cadetblue;
     width: 100%;
+}
 
+.dir a{
+  text-decoration: none;
+}
+
+.dir a:visited{
+  color:  #24225c;;
 }
 
 .inicio-logo{
@@ -82,6 +102,26 @@
   margin-left: 0.5em;
 }
 
+
+.redes{
+  margin-top: 20px;
+  background-color: black;
+}
+
+.colRedes{
+  text-align: center;
+  font-size: 22px;
+  color: #f2f2f2;
+}
+
+.colRedes a{
+  text-decoration: none;
+  color: #f2f2f2;
+}
+
+.redes a:visited{
+  color: #f2f2f2;
+}
 
 .logo{
     padding-left: 32px;
@@ -173,6 +213,11 @@
     margin-right: 18px;
     padding-right: 0;
   }
+
+  .redes{
+    margin-left: 18px;
+    margin-right: 18px;
+  }
   .inicioSide{
     margin-top: 18px;
     margin-bottom: 16px;
@@ -202,6 +247,11 @@
     margin-right: 84px;
     padding-right: 0;
   }
+
+  .redes{
+    margin-left: 84px;
+    margin-right: 84px;
+  }
   .inicioSide h2{
     font-size: 18px;
   }
@@ -229,6 +279,11 @@
     padding-right: 0;
   }
 
+  .redes {
+    margin-left: 125px;
+    margin-right: 125px;
+  }
+
   .opciones{
     margin-left: 125px;
     margin-right: 125px;
@@ -253,7 +308,9 @@
     font-size: 32px;
     width: 150%;
   }
+
   .rowDir{
     margin-right: -45px;
   }
+
 }
